# Quantiloom-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  build_windows_llvm.ps1  build_windows_msvc.ps1
assets/configs/: gltf_pbr_test.toml  usd_spectral_test.toml
resources/: quantiloom.qrc
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/dialogs/: SettingsDialog.cpp  SettingsDialog.hpp
src/editing/: Commands.cpp  Commands.hpp  SelectionManager.cpp  SelectionManager.hpp  TransformGizmo.cpp  TransformGizmo.hpp  UndoStack.cpp  UndoStack.hpp
src/i18n/translations/: quantiloom_en.ts  quantiloom_zh_CN.ts
src/panels/: AtmosphericPanel.cpp  AtmosphericPanel.hpp  DebugVisualizationPanel.cpp  DebugVisualizationPanel.hpp  DisplayEnhancementPanel.cpp  DisplayEnhancementPanel.hpp  LightingPanel.cpp  LightingPanel.hpp  MaterialEditorPanel.cpp  MaterialEditorPanel.hpp  RenderSettingsPanel.cpp  RenderSettingsPanel.hpp  SceneTreePanel.cpp  SceneTreePanel.hpp  SensorPanel.cpp  SensorPanel.hpp  SpectralConfigPanel.cpp  SpectralConfigPanel.hpp
src/vulkan/: QuantiloomVulkanRenderer.cpp  QuantiloomVulkanRenderer.hpp  QuantiloomVulkanWindow.cpp  QuantiloomVulkanWindow.hpp
